--- a/index.html
+++ b/index.html
@@ -402,58 +402,73 @@
 
   <!-- Main Content -->
   <main id="main-content">
-    <!-- Hero Section -->
-    <section class="hero hero--full">
-      <div class="hero__background">
+    <!-- Hero Section - Premium -->
+    <section class="hero-premium">
+      <div class="hero-premium__background">
         <img src="assets/images/services/janitorial-service.jpg" alt="Professional janitorial cleaning services in Massachusetts - Dorys Cleaning team at work" loading="eager">
-        <div class="hero__overlay hero__overlay--gradient"></div>
+        <div class="hero-premium__overlay"></div>
       </div>
-      <div class="hero__shapes">
-        <div class="hero__shape hero__shape--1"></div>
-        <div class="hero__shape hero__shape--2"></div>
-        <div class="hero__shape hero__shape--3"></div>
-      </div>
-      <div class="container hero__container">
-        <div class="hero__content">
-          <div class="hero__badge">
-            <svg class="hero__badge-icon" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/></svg>
-            <span>21+ Years of Excellence in Massachusetts</span>
+      <div class="container">
+        <div class="hero-premium__content">
+          <div class="hero-premium__badge">
+            <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/></svg>
+            Trusted by Massachusetts Since 2004
           </div>
-          <h1 class="hero__title">Professional Janitorial & Cleaning Services in <span>Massachusetts</span></h1>
-          <p class="hero__subtitle">Trusted by businesses and homeowners across Massachusetts. We deliver exceptional cleaning results with attention to detail, clear communication, and over two decades of experience.</p>
-          <div class="hero__ctas">
-            <a href="contact.html" class="btn btn--primary btn--lg btn--pulse" data-track="cta-hero-quote">Get a Free Quote</a>
-            <a href="tel:+19783078107" class="btn btn--outline-light btn--lg" data-track="cta-hero-call">
-              <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/></svg>
-              Call (978) 307-8107
+          <h1 class="hero-premium__title">Professional Cleaning Services You Can Trust in <span>Massachusetts</span></h1>
+          <p class="hero-premium__subtitle">Licensed, insured, and locally owned. We provide reliable commercial and residential cleaning with attention to detail, transparent pricing, and over 21 years of proven results.</p>
+
+          <!-- Trust Indicators -->
+          <div class="hero-premium__trust-badges">
+            <div class="hero-premium__trust-badge">
+              <svg viewBox="0 0 24 24" fill="currentColor"><path d="M19 3h-4.18C14.4 1.84 13.3 1 12 1c-1.3 0-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm2 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z"/></svg>
+              <span>21+ Years Experience</span>
+            </div>
+            <div class="hero-premium__trust-badge">
+              <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/></svg>
+              <span>100+ Cities Served</span>
+            </div>
+            <div class="hero-premium__trust-badge">
+              <svg viewBox="0 0 24 24" fill="currentColor"><path d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"/></svg>
+              <span>Professional Team</span>
+            </div>
+          </div>
+
+          <!-- CTA Buttons -->
+          <div class="hero-premium__ctas">
+            <a href="tel:+19783078107" class="btn btn--accent btn--xl" data-track="cta-hero-call">
+              <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor"><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/></svg>
+              Call Now: (978) 307-8107
+            </a>
+            <a href="contact.html" class="btn btn--white btn--xl" data-track="cta-hero-quote">
+              Get a Free Estimate
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/></svg>
             </a>
           </div>
-          <div class="hero__trust">
-            <div class="hero__rating">
-              <div class="hero__rating-stars">
+
+          <!-- Social Proof Row -->
+          <div class="hero-premium__proof">
+            <div class="hero-premium__rating">
+              <div class="hero-premium__stars">
                 <svg viewBox="0 0 24 24"><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
                 <svg viewBox="0 0 24 24"><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
                 <svg viewBox="0 0 24 24"><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
                 <svg viewBox="0 0 24 24"><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
                 <svg viewBox="0 0 24 24"><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
               </div>
-              <span class="hero__rating-value">5.0</span>
-              <span class="hero__rating-count">Google Reviews</span>
+              <span class="hero-premium__rating-text"><strong>5.0</strong> Rating on Google</span>
             </div>
-            <div class="hero__trust-item">
-              <svg class="hero__trust-icon" viewBox="0 0 24 24" fill="currentColor"><path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11v8.8z"/></svg>
-              <span class="hero__trust-text">$2M Insured</span>
-            </div>
-            <div class="hero__trust-item">
-              <svg class="hero__trust-icon" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/></svg>
-              <span class="hero__trust-text">Licensed HIC #213341</span>
+            <div class="hero-premium__credentials">
+              <span class="hero-premium__credential">
+                <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11v8.8z"/></svg>
+                $2M Insured
+              </span>
+              <span class="hero-premium__credential">
+                <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/></svg>
+                MA HIC #213341
+              </span>
             </div>
           </div>
         </div>
-      </div>
-      <div class="hero__scroll" onclick="DorysUtils.smoothScrollTo('#services')">
-        <span class="hero__scroll-text">Scroll Down</span>
-        <div class="hero__scroll-icon"></div>
       </div>
     </section>
 
