--- a/index.html
+++ b/index.html
@@ -376,13 +376,13 @@
             </div>
           </li>
           <li class="nav-item">
-            <a href="about.html" class="nav-link">About Us</a>
+            <a href="#about" class="nav-link">About Us</a>
           </li>
           <li class="nav-item">
-            <a href="reviews.html" class="nav-link">Reviews</a>
+            <a href="#reviews" class="nav-link">Reviews</a>
           </li>
           <li class="nav-item">
-            <a href="contact.html" class="nav-link">Contact</a>
+            <a href="#contact" class="nav-link">Contact</a>
           </li>
         </ul>
       </nav>
@@ -629,8 +629,8 @@
       </div>
     </section>
 
-    <!-- Why Choose Us Section -->
-    <section class="section section--light">
+    <!-- Why Choose Us / About Section -->
+    <section id="about" class="section section--light">
       <div class="container">
         <div class="section__header section__header--center">
           <span class="section__badge">Why Choose Us</span>
@@ -768,7 +768,7 @@
     </section>
 
     <!-- Reviews Section -->
-    <section class="section section--gradient">
+    <section id="reviews" class="section section--gradient">
       <div class="container">
         <div class="section__header section__header--center">
           <span class="section__badge">Testimonials</span>
@@ -788,7 +788,7 @@
     </section>
 
     <!-- Contact Form Section -->
-    <section class="section section--alt">
+    <section id="contact" class="section section--alt">
       <div class="container">
         <div class="two-col">
           <div class="animate-on-scroll animate-fade-right">
@@ -989,11 +989,11 @@
           <h4 class="footer__title">Quick Links</h4>
           <ul class="footer__links">
             <li><a href="/">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
+            <li><a href="#about">About Us</a></li>
             <li><a href="services/">Services</a></li>
             <li><a href="locations/">Service Areas</a></li>
-            <li><a href="reviews.html">Reviews</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="#reviews">Reviews</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
 
